--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# Compiled class file
-*.class
+# gradle
 
-# Log file
-*.log
+.gradle/
+build/
+out/
 
-# BlueJ files
-*.ctxt
+# idea
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+bin/
+.idea/
+.settings/
+.project
+*.iml
+*.ipr
+*.iws
+*.launch
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# fabric
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+run/
