--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ dependencies {
 //	}
 
     // Sodium
-    modCompileOnly "maven.modrinth:sodium:mc1.18-0.4.+"
+    modCompileOnly "maven.modrinth:sodium:mc1.18-0.4.0-alpha5"
 
     // cloth config
     modApi("me.shedaniel.cloth:cloth-config-fabric:5.+") {
