Removed 'Satin' dependency.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,30 +1,24 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
 minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.2
 loader_version=0.13.3
-
 #Fabric api
 fabric_version=0.48.0+1.18.2
-
 # Mod Properties
-mod_version = 1.2
-maven_group = io.github.ladysnake
-archives_base_name = effective
-
+mod_version=1.2
+maven_group=io.github.ladysnake
+archives_base_name=effective
 #Other Dependencies
-findbugs_version = 3.0.2
-jb_annotations_version = 15.0
-apiguardian_version = 1.0.0
-satin_version = 1.+
-
+findbugs_version=3.0.2
+jb_annotations_version=15.0
+apiguardian_version=1.0.0
 #Publishing
-owners = Ladysnake
-license_header = ARR
-curseforge_id = 556381
-curseforge_versions = 1.18.1
-cf_requirements = fabric-api
-release_type = release
-changelog_url = https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
+owners=Ladysnake
+license_header=ARR
+curseforge_id=556381
+curseforge_versions=1.18.2
+cf_requirements=fabric-api
+release_type=release
+changelog_url=https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
