--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,21 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.3
-loader_version=0.12.11
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.1
+loader_version=0.13.3
 
 #Fabric api
-fabric_version=0.44.0+1.18
+fabric_version=0.47.8+1.18.2
 
 # Mod Properties
 mod_version = 1.0
 maven_group = io.github.ladysnake
 archives_base_name = effective
+
+#Mod Depencencies
+cloth_config_version=6.2.57
+mod_menu_version=3.1.0
 
 #Other Dependencies
 findbugs_version = 3.0.2
