--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.10-SNAPSHOT'
+    id 'fabric-loom' version '0.11-SNAPSHOT'
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
     id 'org.ajoberstar.grgit' version '3.1.1'
@@ -17,7 +17,7 @@ version = project.mod_version
 group = project.maven_group
 
 loom {
-    accessWidener = file("src/main/resources/effective.accesswidener")
+    accessWidenerPath = file("src/main/resources/effective.accesswidener")
 }
 
 //def apiModules = [
@@ -81,19 +81,14 @@ dependencies {
     // modRuntime 'com.github.jellysquid3:sodium-fabric:mc1.16.1-0.1.0'
 
     // cloth config
-    modApi("me.shedaniel.cloth:cloth-config-fabric:5.+") {
+    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
-    include "me.shedaniel.cloth:cloth-config-fabric:5.0.34"
+    include "me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}"
 
     // mod menu
-    modCompileOnly("com.terraformersmc:modmenu:2.0.5") {
-        exclude module: "fabric-api"
-    }
-
-    modRuntime("com.terraformersmc:modmenu:2.0.5") {
-        exclude module: "fabric-api"
-    }
+    modCompileOnly "com.terraformersmc:modmenu:${mod_menu_version}"
+    modRuntimeOnly "com.terraformersmc:modmenu:${mod_menu_version}"
 
     // canvas renderer
 //    modImplementation "grondag:canvas-mc117-1.17:1.0.2033"
