--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.1
+yarn_mappings=1.18.2+build.2
 loader_version=0.13.3
 
 #Fabric api
-fabric_version=0.47.8+1.18.2
+fabric_version=0.48.0+1.18.2
 
 # Mod Properties
 mod_version = 1.1.1
@@ -17,12 +17,13 @@ archives_base_name = effective
 #Mod Depencencies
 cloth_config_version=6.2.57
 mod_menu_version=3.1.0
+sodium_version=mc1.18.2-0.4.1
+satin_version = 1.+
 
 #Other Dependencies
 findbugs_version = 3.0.2
 jb_annotations_version = 15.0
 apiguardian_version = 1.0.0
-satin_version = 1.+
 
 #Publishing
 owners = Ladysnake
