WHY WONT MIDNIGHT LIB WORK

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,10 +14,10 @@ maven_group = io.github.ladysnake
 archives_base_name = effective
 
 #Mod Depencencies
-cloth_config_version=6.2.57
-mod_menu_version=3.1.0
+mod_menu_version=4.0.6
 sodium_version=mc1.18.2-0.4.1
 satin_version = 1.+
+midnightlib_version=0.5.2
 
 #Other Dependencies
 findbugs_version = 3.0.2
