--- a/gradle.properties
+++ b/gradle.properties
@@ -9,15 +9,15 @@ loader_version=0.13.3
 fabric_version=0.48.0+1.18.2
 
 # Mod Properties
-mod_version = 1.2.1
+mod_version = 1.3.0
 maven_group = io.github.ladysnake
 archives_base_name = effective
 
 #Mod Depencencies
-cloth_config_version=6.2.57
 mod_menu_version=3.1.0
 sodium_version=mc1.18.2-0.4.1
 satin_version = 1.+
+midnightlib_version=0.4.4
 
 #Other Dependencies
 findbugs_version = 3.0.2
