--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     modCompileOnly "com.github.CaffeineMC:sodium-fabric:${sodium_version}"
 
 	// satin
-	modCompileOnly "io.github.ladysnake:satin:${satin_version}"
+    modImplementation "io.github.ladysnake:satin:${satin_version}"
 
     // midnightlib
     modImplementation "maven.modrinth:midnightlib:${midnightlib_version}"
