--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,28 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.8
-loader_version=0.14.9
-
-#Fabric api
-fabric_version=0.60.0+1.19.2
+# Gradle Properties
+org.gradle.jvmargs = -Xmx4G
+org.gradle.parallel = true
 
 # Mod Properties
-mod_version = 1.4
+version = 1.5
 maven_group = io.github.ladysnake
 archives_base_name = effective
 
+# Dependencies are managed at gradle/libs.versions.toml
+
 #Mod Depencencies
 mod_menu_version=4.0.6
-sodium_version=mc1.18.2-0.4.1
+sodium_version=mc1.19.2-0.4.4
+iris_version=1.19.x-v1.4.0
 satin_version = 1.+
 midnightlib_version=0.5.2
-
-#Other Dependencies
-findbugs_version = 3.0.2
-jb_annotations_version = 15.0
-apiguardian_version = 1.0.0
+cca_version=5.0.2
+carpet_version=1.19.1-1.4.83+v220727
 
 #Publishing
 owners = Ladysnake
 license_header = ARR
 curseforge_id = 556381
 curseforge_versions = 1.19.2
-cf_requirements = fabric-api
+cf_requirements = qsl
 release_type = release
 changelog_url = https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
