--- a/build.gradle
+++ b/build.gradle
@@ -75,13 +75,18 @@ dependencies {
 	modCompileOnly "com.terraformersmc:modmenu:${mod_menu_version}"
 	modRuntimeOnly "com.terraformersmc:modmenu:${mod_menu_version}"
 
-
 	// midnightlib
 	modImplementation "maven.modrinth:midnightlib:${midnightlib_version}"
 	include "maven.modrinth:midnightlib:${midnightlib_version}"
 
 	// lodestone lib
-	modImplementation include ('com.github.Arathain:LodestoneLib-Quilt:bd65134fa2')
+	modImplementation include ('com.github.Arathain:LodestoneLib-Quilt:05d0bf75f3')
+
+	// iris and sodium
+	modRuntimeOnly("maven.modrinth:sodium:${project.sodium_version}")
+	modRuntimeOnly("maven.modrinth:iris:${project.iris_version}")
+	runtimeOnly compileOnly("org.anarres:jcpp:1.4.14") // for iris
+	runtimeOnly('org.joml:joml:1.10.4') // for sodium
 }
 
 processResources {
