--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ mod_menu_version=4.0.6
 sodium_version=mc1.19.2-0.4.4
 iris_version=1.19.x-v1.3.0
 satin_version = 1.+
-midnightlib_version=0.5.2
+midnightlib_version=0.6.1
 cca_version=5.0.2
 carpet_version=1.19.1-1.4.83+v220727
 
@@ -24,5 +24,6 @@ license_header = ARR
 curseforge_id = 556381
 curseforge_versions = 1.19.2
 cf_requirements = qsl
+cf_embeddeds = satin-api; midnightlib
 release_type = release
 changelog_url = https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
