Added: Glow waterfall clouds + Glow rain ripple + Hypnotizing glow squids + Removed rain ripples from no rain biomes and from water block that cannot see the sky

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,15 +9,18 @@ loader_version=0.13.3
 fabric_version=0.48.0+1.18.2
 
 # Mod Properties
-mod_version = 1.3.0
+mod_version = 1.5.0
 maven_group = io.github.ladysnake
 archives_base_name = effective
 
 #Mod Depencencies
 mod_menu_version=3.1.0
 sodium_version=mc1.18.2-0.4.1
+iris_version=1.18.x-v1.4.0
 satin_version = 1.+
 midnightlib_version=0.4.4
+cca_version=5.0.2
+carpet_version=1.19.1-1.4.83+v220727
 
 #Other Dependencies
 findbugs_version = 3.0.2
@@ -29,6 +32,5 @@ owners = Ladysnake
 license_header = ARR
 curseforge_id = 556381
 curseforge_versions = 1.18.2
-cf_requirements = fabric-api
 release_type = release
 changelog_url = https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
