--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.13.3
 fabric_version=0.48.0+1.18.2
 
 # Mod Properties
-mod_version = 1.5.0
+mod_version = 1.4.1
 maven_group = io.github.ladysnake
 archives_base_name = effective
 
@@ -32,5 +32,6 @@ owners = Ladysnake
 license_header = ARR
 curseforge_id = 556381
 curseforge_versions = 1.18.2
+cf_embeddeds = satin-api; midnightlib
 release_type = release
 changelog_url = https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
