--- a/gradle.properties
+++ b/gradle.properties
@@ -3,26 +3,24 @@ org.gradle.jvmargs = -Xmx4G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 1.6
+version = 1.7
 maven_group = io.github.ladysnake
 archives_base_name = effective
 
 # Dependencies are managed at gradle/libs.versions.toml
 
 #Mod Depencencies
-mod_menu_version=4.0.6
-sodium_version=mc1.19.2-0.4.4
-iris_version=1.19.x-v1.3.0
+mod_menu_version=5.0.2
+sodium_version=mc1.19.3-0.4.6
+iris_version=1.19.3-v1.4.6
 satin_version = 1.+
-midnightlib_version=0.6.1
-cca_version=5.0.2
-carpet_version=1.19.1-1.4.83+v220727
+midnightlib_version= 1.1.0
 
 #Publishing
 owners = Ladysnake
 license_header = ARR
 curseforge_id = 556381
-curseforge_versions = 1.19.2
+curseforge_versions = 1.19.3
 cf_requirements = qsl
 cf_embeddeds = satin-api; midnightlib
 release_type = release
