--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.19.2"
-quilt_mappings = "1.19.2+build.19"
-quilt_loader = "0.17.4"
+minecraft = "1.19.3"
+quilt_mappings = "1.19.3+build.5"
+quilt_loader = "0.18.1-beta.25"
 
-quilted_fabric_api = "4.0.0-beta.14+0.62.0-1.19.2"
+quilted_fabric_api = "5.0.0-alpha.5+0.68.1-1.19.3"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
@@ -19,4 +19,4 @@ quilted_fabric_api_deprecated = { module = "org.quiltmc.quilted-fabric-api:quilt
 quilted_fabric_api = ["quilted_fabric_api", "quilted_fabric_api_deprecated"]
 
 [plugins]
-quilt_loom = { id = "org.quiltmc.loom", version = "1.0.+" }
+quilt_loom = { id = "org.quiltmc.loom", version = "1.+" }
