--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ archives_base_name = effective
 
 #Mod Depencencies
 mod_menu_version=5.0.2
-sodium_version=mc1.19.3-0.4.6
-iris_version=1.19.3-v1.4.6
+sodium_version=mc1.19.3-0.4.8
+iris_version=1.5.1+1.19.3
 satin_version = 1.+
 midnightlib_version= 1.1.0
 
