--- a/gradle.properties
+++ b/gradle.properties
@@ -7,21 +7,22 @@ version = 2.0
 maven_group = io.github.ladysnake
 archives_base_name = effective
 
-# Dependencies are managed at gradle/libs.versions.toml
+# Dependencies
+minecraft_version=1.19.2
+quilt_mappings=22
 
-#Mod Depencencies
-mod_menu_version=5.0.2
-sodium_version=mc1.19.3-0.4.8
-iris_version=1.5.1+1.19.3
+loader_version=0.19.0-beta.18
+
+# QSL
+# QSL version number is shared between all the modules.
+qsl_version = 3.0.0-beta.29
+
+# Quilted Fabric API
+quilted_fabric_api_version = 4.0.0-beta.30+0.76.0
+
+# Mod Depencencies
+mod_menu_version=4.2.0-beta.2
+sodium_version=mc1.19.2-0.4.4
+iris_version=1.6.4+1.19.2
 satin_version = 1.+
-midnightlib_version= 1.1.0
-
-#Publishing
-owners = Ladysnake
-license_header = ARR
-curseforge_id = 556381
-curseforge_versions = 1.19.3
-cf_requirements = qsl
-cf_embeddeds = satin-api; midnightlib
-release_type = release
-changelog_url = https://github.com/Ladysnake/Effective/blob/main/CHANGELOG.md
+midnightlib_version= 1.0.0
