--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.19.3"
-quilt_mappings = "1.19.3+build.5"
-quilt_loader = "0.18.1-beta.25"
+minecraft = "1.19.2"
+quilt_mappings = "1.19.2+build.22"
+quilt_loader = "0.19.0-beta.18"
 
-quilted_fabric_api = "5.0.0-alpha.5+0.68.1-1.19.3"
+quilted_fabric_api = "4.0.0-beta.30+0.76.0-1.19.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
