--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ iris_version= 1.6.4+1.19.2
 satin_version = 1.9.0
 midnightlib_version= 1.0.0
 lodestone_version = 9fe9aea
+mixin_extras_version=0.2.0-beta.8
