--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,11 @@ satin_version = 1.9.0
 midnightlib_version= 1.0.0
 lodestone_version = 9fe9aea
 mixin_extras_version=0.2.0-beta.8
+
+# Release metadata
+modrinth_id = pcPXJeZi
+curseforge_id = 556381
+curseforge_versions = 1.19.2
+cf_requirements = qsl
+cf_embeddeds = satin-api
+release_type = release
