--- a/gradle.properties
+++ b/gradle.properties
@@ -8,18 +8,17 @@ maven_group = io.github.ladysnake
 archives_base_name = effective
 
 #Mod Depencencies
-mod_menu_version= 4.2.0-beta.2
-sodium_version= mc1.19.2-0.4.4
-iris_version= 1.6.4+1.19.2
-satin_version = 1.9.0
-midnightlib_version= 1.0.0
-lodestone_version = 9fe9aea
-mixin_extras_version=0.2.0-beta.8
+mod_menu_version= 7.1.0
+sodium_version= mc1.20-0.4.10
+iris_version= 1.6.4+1.20
+satin_version = 1.13.0
+midnightlib_version= 1.4.1
+mixin_extras_version=0.2.0-beta.9
 
 # Release metadata
 modrinth_id = pcPXJeZi
 curseforge_id = 556381
-curseforge_versions = 1.19.2
+curseforge_versions = 1.20.1
 cf_requirements = qsl
 cf_embeddeds = satin-api
 release_type = release
