--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.19.2"
-quilt_mappings = "1.19.2+build.22"
-quilt_loader = "0.19.0-beta.18"
+minecraft = "1.20.1"
+quilt_mappings = "1.20.1+build.1"
+quilt_loader = "0.19.1"
 
-quilted_fabric_api = "4.0.0-beta.30+0.76.0-1.19.2"
+quilted_fabric_api = "7.0.3+0.83.1-1.20.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
@@ -19,4 +19,4 @@ quilted_fabric_api_deprecated = { module = "org.quiltmc.quilted-fabric-api:quilt
 quilted_fabric_api = ["quilted_fabric_api", "quilted_fabric_api_deprecated"]
 
 [plugins]
-quilt_loom = { id = "org.quiltmc.loom", version = "1.+" }
+quilt_loom = { id = "org.quiltmc.loom", version = "1.2.+" }
