Dependency fix The ladysnake repo url has changed Lodestone lib got updated to 1.20 on this same branch, so we need to revert this back to the commit with 1.19.4 one.

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 	// satin
 	maven {
 		name = 'Ladysnake Mods'
-		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+		url = 'https://maven.ladysnake.org/releases'
 	}
 
 	// mod menu
