--- a/gradle.properties
+++ b/gradle.properties
@@ -8,18 +8,18 @@ maven_group = io.github.ladysnake
 archives_base_name = effective
 
 #Mod Depencencies
-mod_menu_version=6.2.3
-sodium_version=mc1.19.4-0.4.10
-iris_version=1.6.4+1.19.4
-satin_version = 1.12.1
+mod_menu_version=7.2.1
+sodium_version=mc1.20.1-0.5.1
+iris_version=1.6.7+1.20.1
+satin_version = 1.14.0
 midnightlib_version= 1.3.0
-lodestone_version = 70a03b920e
-mixin_extras_version=0.2.0-beta.8
+lodestone_version = 1.19.3-SNAPSHOT
+mixin_extras_version=0.2.0-beta.9
 
 # Release metadata
 modrinth_id = pcPXJeZi
 curseforge_id = 556381
-curseforge_versions = 1.19.4
+curseforge_versions = 1.20.1
 cf_requirements = qsl
 cf_embeddeds = satin-api
 release_type = release
