--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'maven-publish'
 	alias libs.plugins.quilt.loom
-	id 'io.github.ladysnake.chenille' version '0.11.3'
+	alias libs.plugins.chenille
 }
 
 archivesBaseName = project.archives_base_name
@@ -29,6 +29,7 @@ repositories {
 		content {
 			includeGroup 'org.ladysnake'
 			includeGroup 'io.github.ladysnake'
+			includeGroup 'team.lodestar.lodestone'
 		}
 	}
 
@@ -38,7 +39,12 @@ repositories {
 		url = 'https://maven.terraformersmc.com/'
 	}
 
-	maven { url 'https://jitpack.io' }
+	maven {
+		url 'https://jitpack.io'
+		content {
+			includeGroupByRegex('com\\.github\\..*')
+		}
+	}
 
 	maven {
 		name "modrinth"
@@ -68,12 +74,13 @@ dependencies {
 
 	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
 	// Quilted Fabric API will automatically pull in the correct QSL version.
-	modImplementation libs.quilted.fabric.api
+	modImplementation libs.quilt.quiltedFabricApi
 	// modImplementation libs.bundles.quilted.fabric.api // If you wish to use Fabric API's deprecated modules, you can replace the above line with this one
 
 	// mod menu
-	modCompileOnly "com.terraformersmc:modmenu:${mod_menu_version}"
-	//modRuntimeOnly ("com.terraformersmc:modmenu:${mod_menu_version}")
+	modLocalImplementation(libs.modmenu) {
+		transitive = false
+	}
 
 	// midnightlib
 	modImplementation include("maven.modrinth:midnightlib:${midnightlib_version}-quilt")
@@ -84,7 +91,7 @@ dependencies {
 	}
 
 	// lodestone lib
-	modImplementation include("com.github.Arathain:LodestoneLib-Quilt:${lodestone_version}") {
+	modImplementation include("team.lodestar.lodestone:LodestoneLib-Quilt:${lodestone_version}") {
 		exclude group: 'io.github.ladysnake'
 	}
 
@@ -93,10 +100,6 @@ dependencies {
 	modRuntimeOnly("maven.modrinth:sodium:${project.sodium_version}")
 	modRuntimeOnly("maven.modrinth:iris:${project.iris_version}")
 	runtimeOnly compileOnly("org.anarres:jcpp:1.4.14") // for iris
-	runtimeOnly('org.joml:joml:1.10.4') // for sodium
-
-	// mixin extras
-	include( implementation( annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${project.mixin_extras_version}")))
 }
 
 chenille {
