--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,7 @@ version = 3.0.0
 maven_group = org.ladysnake
 archives_base_name = effective
 
-#Mod Depencencies
-mod_menu_version=7.2.1
-sodium_version=mc1.20.1-0.5.1
-iris_version=1.6.7+1.20.1
-satin_version = 1.14.0
-midnightlib_version= 1.4.1
-lodestone_version = 0.0.4+1.20.1
+### For dependencies, look at gradle/libs.versions.toml
 
 # Release metadata
 modrinth_id = pcPXJeZi
