Waiting for lodestone

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,9 @@ modrinth_id = effective
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.16.5
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
+loader_version=0.15.11
 
 # Mod Properties
 mod_version=2.2.2
@@ -17,32 +17,24 @@ maven_group=ladynake
 archives_base_name=effective
 
 # Dependencies
-fabric_version=0.92.2+1.20.1
+fabric_version=0.100.3+1.21
 #veil_version = 1.0.0.225
-mod_menu_version = 7.2.0
-cca_version = 5.2.2
-midnightlib_version = 1.4.1-fabric
-lodestone_version = 1.20.1-1.6.2.3f-fabric
-satin_version = 1.14.0
-sodium_version = mc1.20.1-0.5.11
-iris_version = 1.7.2+1.20.1
+mod_menu_version = 11.0.1
+cca_version = 6.1.1
+midnightlib_version = 1.5.7-fabric
+satin_version = 2.0.0
+sodium_version = mc1.21-0.5.11
+iris_version = 1.7.3+1.21
 jcpp_version = 1.4.14
 glslTransformer_version = 2.0.0-pre13
-portinglib_version = 2.3.4+1.20.1
+lodestone_version = 1.21.1-1.7.0
+portinglib_version = 3.1.0-beta-beta.35+1.21
 portinglib_modules = \
   accessors,\
   base,\
   blocks,\
-  config,\
   core,\
   data,\
-  entity,\
   extensions,\
-  items,\
   lazy_registration,\
-  model_generators,\
-  models,\
-  networking,\
-  tags,\
-  transfer,\
-  tool_actions
+  models
