--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ archives_base_name=effective
 
 # Dependencies
 fabric_version=0.92.2+1.20.1
-#veil_version = 1.0.0.225
+veil_version = 1.0.0.225
 mod_menu_version = 7.2.0
 cca_version = 5.2.2
 midnightlib_version = 1.4.1-fabric
