Make dark sculk dust properly respect environment lighting

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ loom {
 	splitEnvironmentSourceSets()
 
 	mods {
-		"modid" {
+		"effective" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
